# scraping

./: README  gather-stats  summarize-data
cpp/: .gitignore  CMakeLists.txt  README.md  scrape.cpp
python/: .gitignore  README.rst  scrape
